--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
                 Email</a><span class="text-neutral-500">,</span>
 
-            <a href="https://github.com/abzr1" target="_blank" rel="noopener noreferrer"
+            <a href="https://github.com/cobrexus" target="_blank" rel="noopener noreferrer"
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
                 GitHub</a><span class="text-neutral-500">,</span>
 
@@ -56,10 +56,6 @@
             <a href="https://stackoverflow.com/users/12860895" target="_blank" rel="noopener noreferrer"
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
                 Stack Overflow</a><span class="text-neutral-500">,</span>
-
-            <a href="https://x.com/a_bzr11" target="_blank" rel="noopener noreferrer"
-                class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
-                X</a></span>
 
             <span class="text-neutral-500">]}</span>
         </p>
