--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
 
             <a href="https://stackoverflow.com/users/12860895" target="_blank" rel="noopener noreferrer"
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
-                Stack Overflow</a><span class="text-neutral-500">,</span>
+                Stack Overflow</a>
 
             <span class="text-neutral-500">]}</span>
         </p>
