--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
         <p class="my-8">
             <span class="text-neutral-500">{ about:</span>
-            I am a young and dynamic programmer with a passion for learning
+            I am a young and dynamic programmer with a passion for learning.
             <span class="text-neutral-500">}</span>
         </p>
 
@@ -58,6 +58,14 @@
                 Stack Overflow</a>
 
             <span class="text-neutral-500">]}</span>
+        </p>
+
+        <p class="my-8">
+            <span class="text-neutral-500">{ game:</span>
+            Go <a href="./game/" target="_blank" rel="noopener noreferrer"
+                class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
+                here</a> to play a game!
+            <span class="text-neutral-500">}</span>
         </p>
     </main>
 
