--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,9 @@
             <span class="text-neutral-500">{ skills: [</span>
 
             Rust<span class="text-neutral-500">,</span>
+            C++<span class="text-neutral-500">,</span>
             Swift<span class="text-neutral-500">,</span>
-            Python<span class="text-neutral-500">,</span>
-            TypeScript<span class="text-neutral-500">,</span>
-            Node.js<span class="text-neutral-500">,</span>
-            React
+            Python
 
             <span class="text-neutral-500">]}</span>
         </p>
