--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,8 @@
         <p class="my-8">
             <span class="text-neutral-500">{ skills: [</span>
 
-            Rust<span class="text-neutral-500">,</span>
-            C++<span class="text-neutral-500">,</span>
-            Swift<span class="text-neutral-500">,</span>
-            Python
+            Rust<span class="text-neutral-500">&&</span>
+            C++
 
             <span class="text-neutral-500">]}</span>
         </p>
