--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
         <p class="my-8">
             <span class="text-neutral-500">{ skills: [</span>
 
-            Rust<span class="text-neutral-500">&&</span>
+            Rust
+            <span class="text-neutral-500">&&</span>
             C++
 
             <span class="text-neutral-500">]}</span>
