--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,13 @@
         <p class="my-8">
             <span class="text-neutral-500">{ skills: [</span>
 
+            C++<span class="text-neutral-500">,</span>
             Rust<span class="text-neutral-500">,</span>
-            C++
+            Git<span class="text-neutral-500">,</span>
+            Swift<span class="text-neutral-500">,</span>
+            Python<span class="text-neutral-500">,</span>
+            HTML<span class="text-neutral-500">,</span>
+            CSS
 
             <span class="text-neutral-500">]}</span>
         </p>
