--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,11 @@
         <p class="my-8">
             <span class="text-neutral-500">{ skills: [</span>
 
-            C++<span class="text-neutral-500">,</span>
             Rust<span class="text-neutral-500">,</span>
-            Git<span class="text-neutral-500">,</span>
+            C++<span class="text-neutral-500">,</span>
             Swift<span class="text-neutral-500">,</span>
             Python<span class="text-neutral-500">,</span>
-            HTML<span class="text-neutral-500">,</span>
-            CSS
+            Git
 
             <span class="text-neutral-500">]}</span>
         </p>
