Add TS and JS to skills

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
             Rust<span class="text-neutral-500">,</span>
             C++<span class="text-neutral-500">,</span>
             Swift<span class="text-neutral-500">,</span>
+            TypeScript<span class="text-neutral-500">,</span>
+            JavaScript<span class="text-neutral-500">,</span>
             Python<span class="text-neutral-500">,</span>
             Git
 
