--- a/src/index.html
+++ b/src/index.html
@@ -17,31 +17,13 @@
     <main class="w-4/5 md:w-3/5 mx-auto">
         <div class="py-14"></div>
 
-        <h1 class="text-5xl font-bold">Aryan Beezadhur</h1>
+        <h1 class="text-5xl font-bold">
+            Aryan Beezadhur
+        </h1>
+
+        <p class="my-8">C++ and Rust programmer.</p>
 
         <p class="my-8">
-            <span class="text-neutral-500">{ about:</span>
-            I am a young and dynamic programmer with a passion for learning.
-            <span class="text-neutral-500">}</span>
-        </p>
-
-        <p class="my-8">
-            <span class="text-neutral-500">{ skills: [</span>
-
-            Rust<span class="text-neutral-500">,</span>
-            C++<span class="text-neutral-500">,</span>
-            Swift<span class="text-neutral-500">,</span>
-            TypeScript<span class="text-neutral-500">,</span>
-            JavaScript<span class="text-neutral-500">,</span>
-            Python<span class="text-neutral-500">,</span>
-            Git
-
-            <span class="text-neutral-500">]}</span>
-        </p>
-
-        <p class="my-8">
-            <span class="text-neutral-500">{ social: [</span>
-
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
                 Email</a><span class="text-neutral-500">,</span>
@@ -57,8 +39,6 @@
             <a href="https://stackoverflow.com/users/12860895" target="_blank" rel="noopener noreferrer"
                 class="bg-gradient-to-r from-neutral-500 to-neutral-500 hover:text-neutral-500 duration-150 bg-[length:100%_0.125rem] bg-[0_100%] bg-no-repeat">
                 Stack Overflow</a>
-
-            <span class="text-neutral-500">]}</span>
         </p>
     </main>
 
