--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             Aryan Beezadhur
         </h1>
 
-        <p class="my-8">C++ programmer.</p>
+        <p class="my-8">Programmer.</p>
 
         <p class="my-8">
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
