--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./output.css" />
 </head>
@@ -22,6 +23,8 @@
         </h1>
 
         <p class="my-8">Programmer.</p>
+
+        <p class="my-8">Skills: C++, C#, Rust, JavaScript, React, Python.</p>
 
         <p class="my-8">
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
