--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
         <p class="my-8">Programmer.</p>
 
-        <p class="my-8">Skills: Rust, C++, Swift, C#, JavaScript, React, Python, Luau.</p>
+        <p class="my-8">Skills: C++, C#, Rust, Swift, JavaScript, React, Python, Luau.</p>
 
         <p class="my-8">
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
