--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
 
         <p class="my-8">Programmer.</p>
 
-        <p class="my-8">Skills: C++, C#, Rust, Swift, JavaScript, React, Python, Luau.</p>
+        <p class="my-8">
+            Skills: Git, C++, C#, Rust, Go, Swift, JavaScript, Node.js, React, Next.js, Python, Django, Flask, Luau.
+        </p>
 
         <p class="my-8">
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
