--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,9 @@
             Aryan Beezadhur
         </h1>
 
-        <p class="my-8">Programmer.</p>
-
         <p class="my-8">
-            Skills: Git, C++, C#, Rust, Go, Swift, JavaScript, Node.js, React, Next.js, Python, Django, Flask, Luau.
+            I am a young and dynamic self-taught developer with experience using a wide range of technologies. My
+            programming portfolio can be found on my GitHub below.
         </p>
 
         <p class="my-8">
