--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="h-full bg-black text-white font-body">
-    <main class="w-4/5 md:w-3/5 mx-auto">
+    <main class="w-4/5 md:w-2/5 mx-auto">
         <div class="py-14"></div>
 
         <h1 class="text-5xl font-bold">
@@ -24,9 +24,10 @@
         </h1>
 
         <p class="my-8">
-            I am a young and dynamic self-taught developer with experience using a wide range of technologies. My
-            programming portfolio can be found on my GitHub below.
+            I am a young and dynamic self-taught developer with experience using a wide range of technologies.
         </p>
+
+        <p class="my-8">My programming portfolio can be found on my GitHub below.</p>
 
         <p class="my-8">
             <a href="mailto:aryanbeezadhur@gmail.com" target="_blank" rel="noopener noreferrer"
